Atualiza página com categoria sobremesas

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@ header {
       <span data-category="refeicoes">Refeições</span>
       <span data-category="saladas">Saladas</span>
       <span data-category="prato-principal">Prato Principal</span>
+      <span data-category="sobremesas">Sobremesa</span>
     </nav>
 
     <input type="text" placeholder="Buscar..." />
@@ -240,37 +241,37 @@ header {
   const produtosPorCategoria = {
     'aperitivos': [
       {
-        title: "Panda Pão de Carne",
-        description: "Recheio de carne com gengibre, cebolinha e vegetais.",
+        title: "01 - Panda Pão de Carne",
+        description: "Recheio de carne com gengibre, cebolinha e vegetais. Não teremos hoje!",
         price: "R$ 02,00",
         image: "imagens/028a636ce4b3f99490ff574be7582d819a89cb88.png"
       },
       {
-        title: "Panda Pão de Vegetais",
-        description: "Recheio de cogumelos Shitake com vegetais.",
+        title: "01 - Panda Pão de Vegetais",
+        description: "Recheio de cogumelos Shitake com vegetais.  Não teremos hoje!",
         price: "R$ 00,00",
         image: "imagens/c4e7c662ef4a9f898fcca95f55f75d8308703017.png"
       },
       {
-        title: "Corte Wei ao Molho Negro",
+        title: "02 - Corte Wei ao Molho Negro",
         description: "Rosbife de carne músculo defumado e temperado com especiarias chinesas.",
         price: "R$ 00,00",
         image: "imagens/415c56a3c3758f12a7b67906ffd8e2fd5e2e38fa (1).png"
       },
       {
-        title: "Estalido da Floresta",
+        title: "03 - Estalido da Floresta",
         description: "Shimeji branco, pimentao vermelho, pimentao verde.",
         price: "R$ 00,00",
         image: "imagens/ffdb6aad439844355f34cba00be7d25ee2e9f536.png"
       },
       {
-        title: "Delícia Crocante do Oceano",
+        title: "04 - Delícia Crocante do Oceano",
         description: "Camarão, pão formado sem cascra adosante leite condensado wasbi gengilim branco e preto.",
         price: "R$ 00,00",
         image: "imagens/6af76c5a562a727a8a346a79ff0fa11791aee8e8.png"
       },
       {
-        title: "Estalido do Mar",
+        title: "05 - Estalido do Mar",
         description: "Lula, pimentao verde, pimentao vermelho, cebola.",
         price: "R$ 00,00",
         image: "imagens/34dece0ecaba699a54c375f375e1a68fee0c7c28.png"
@@ -278,85 +279,85 @@ header {
     ],
     'refeicoes': [
       {
-        title: "Tesouro Agridoce de Lombinho",
+        title: "06 - Tesouro Agridoce de Lombinho",
         description: "Filé mignon suíno com molho agridoce.",
         price: "R$ 00,00",
         image: "imagens/1471ee4a6cdde8deb7c1494f4503f27c92a0d6ac.png"
       },
       {
-        title: "Pipoca de camarão crocante",
-        description: "Camarao sem casca 7cm.",
+        title: "07 - Pipoca de camarão crocante",
+        description: "Camarão a milanea crocante",
         price: "R$ 00,00",
         image: "imagens/dd567fa6c49aafad2ced6e36442d5cde1e66b7b9.png"
       },
       {
-        title: "Brilho Agridoce de Abacaxi e Frango",
+        title: "08 - Brilho Agridoce de Abacaxi e Frango",
         description: "Peito de frango pimentao de verde vermelho amarelo cebola.",
         price: "R$ 00,00",
         image: "imagens/5fbd7dadeec4e86ccbdb74b2ec6261f248b02d28.png"
       },
       {
-        title: "Peixe ao Vapor",
-        description: "Robalo 30cm cebolinha gengibre e pimentao vermelho.",
+        title: "09 - Peixe ao Vapor",
+        description: "Namorado feito no vapor com um leve toque de gengibre, cebolinha e pimentão ",
         price: "R$ 00,00",
         image: "imagens/peixe a vapor.jpg"
       },
       {
-        title: "Bailarinos do Mar ao Alho",
-        description: "",
+        title: "10 - Bailarinos do Mar ao Alho",
+        description: "Camarões ao alho e epeciarias sobre cama de bifum",
         price: "R$ 00,00",
         image: "imagens/515112781c6cba08178c84e170b99057386c798f - Copia.png"
       },
       {
-        title: "Suspiro de Sichuan",
+        title: "11 - Suspiro de Sichuan",
         description: "File mignon de suina cenoura pimentao verde cogumelo preto cebolinha alho.",
         price: "R$ 00,00",
         image: "imagens/b05d0c3e9f5e26fceff8ee9b0bf02d6906770d0e.png"
       },
       {
-        title: "Kung Bao Frango",
+        title: "12 - Kung Bao Frango",
         description: "Peito de frango com pepino cenoura, cebolinha e amendoim.",
         price: "R$ 00,00",
         image: "imagens/37e03bcc4adeca70d7de29af660f44868eb9a07a - Copia.png"
       },
       {
-        title: "Brilho Oriental de Bifum e Carne",
+        title: "13 - Brilho Oriental de Bifum e Carne",
         description: "File mignon de boi com pimentão vermelho e cebolinha.",
         price: "R$ 00,00",
         image: "imagens/bifum.jpg"
       },
       {
-        title: "Kung-Fu Yakisoba",
+        title: "14 - Kung-Fu Yakisoba",
         description: "",
         price: "R$ 00,00",
         image: "imagens/40201b2764ffef62aef35ceaff407456f3bcad92 - Copia.png"
       },
       {
-        title: "Yakisoba de Carne Clássico",
+        title: "15 - Yakisoba de Carne Clássico",
         description: "Fariha de trigo, file mignon de boi, camarao, repolho, legumes de soja e cenoura.",
         price: "R$ 00,00",
         image: "imagens/yakisoba de carne clássico.jpg"
       },
       {
-        title: "Mapo Tofu",
+        title: "16 - Mapo Tofu",
         description: "Mapo Tofu.",
         price: "R$ 00,00",
         image: "imagens/mapo tofu.jpg"
       },
       {
-        title: "Pancetta Ardente do Oriente",
+        title: "17 - Barriga de Porco Picante",
         description: "Pancetta Glaceada no Wok com Pimenta Fresca e Alho-Poró.",
         price: "R$ 00,00",
         image: "imagens/64019ba41f87e9b5f7fee892f2a10fc542d22f3d.png"
       },
       {
-        title: "Primavera de Jiangnan",
+        title: "18 - Primavera de Jiangnan",
         description: "Salsão fino , Tofu defumado, pimentão vermelho",
         price: "R$ 00,00",
         image: "imagens/9c985645f633e0949176e0764723f2e8f9d47791 - Copia - Copia.png"
       },
       {
-        title: "Tiras do Imperador",
+        title: "19 - Tiras do Imperador",
         description: "Batata, pimentão verde, pimentão vermelho",
         price: "R$ 00,00",
         image: "imagens/4ee9b5516d27f595f53e60e771f91fdd09e8324a - Copia - Copia.png"
@@ -365,55 +366,84 @@ header {
     ],
     'saladas': [
       {
-        title: "Vegetais Mix",
-        description: "",
+        title: "20 - Jardim Colorido do Oriente",
+        description: "Salada fresca de pepino, mini tomates, folhas verdes e pimentões, temperada com molho leve oriental.",
         price: "R$ 00,00",
-        image: "imagens/9c985645f633e0949176e0764723f2e8f9d47791 - Copia - Copia.png"
+        image: "imagens/20250617-172843.jpg"
       },
       {
-        title: "Pétalas apimentadas de cogumelo",
-        description: "Cogumelo/pimenta picadinha/coentro.",
+        title: "21 - Pétalas apimentadas de cogumelo",
+        description: "Cogumelos pretos marinados em molho picante com pimenta picada, alho e coentro.",
         price: "R$ 00,00",
         image: "imagens/petalas apimentadas.jpg"
       },
-      {
+       {
+        title: "22 - Vegetais Mix",
+        description: "Tiras finas de tofu, pepino e cenoura temperadas com molho leve e coentro. Não teremos hoje!",
+        price: "R$ 00,00",
+        image: "imagens/20250617-172843.jpg"
+      },
+       {
+        title: "23 - Folhas de Névoa",
+        description: "Massa artesanal de trigo, servida fria com pepino, cenoura, repolho, coentro,  cebolinha ",
+        price: "R$ 00,00",
+        image: "imagens/folhasdenovoa.jpg"
+      },
+     /*  {
         title: "Brilho Fresco de Tiras de Tofu",
         description: "Macarrão com tofu, pepino, cenoura, coentro.",
         price: "R$ 00,00",
         image: "imagens/brilho fresco de tiras de tofu.jpg"
       },
-      {
-        title: "Folhas de Névoa",
-        description: "Farinha de trigo, repolho, cenoura, pepino, coentro, cebolinha.",
-        price: "R$ 00,00",
-        image: "imagens/folhasdenovoa.jpg"
-      }
+      */
     ],
     'prato-principal': [
       {
-        title: "Arroz Chinês",
+        title: "24 - Arroz Yunwei ",
         description: "Arroz da loja chinesa /ovos/ milho/cenora/ pepino/cebolinha/salsicha.",
         price: "R$ 00,00",
         image: "imagens/arroz chines.jpg"
       },
        {
-        title: "Sopro do Norte – Lámen com Carne cozida lentamente",
-        description: "",
+        title: "25 - Sopro do Norte",
+        description: "Macarrão lámen artesanal servido em caldo escuro, com carne bovina cozida lentamente, legumes e coentro. Não teremos hoje!",
         price: "R$ 00,00",
         image: "imagens/c070cf7e9f239f9a35dbc18c3e767cc79118bd08.png"
       },
        {
-        title: "Núvem de Arroz",
-        description: "Arroz da loja chinesa /ovos/ milho/cenora/ pepino/cebolinha/salsicha.",
+        title: "26 - Núvem de Arroz",
+        description: "Arroz branco cozido no vapor, leve e soltinho.",
         price: "R$ 00,00",
         image: "imagens/27107c617889f162e01f2ca0f485271b60147fbc.png"
       },
        {
-        title: "Joia Recheada Xi'an",
-        description: "Costela de boi, pimentao verde,cebola branca, farinha.",
+        title: "27 - Joia Recheada Xi'an",
+        description: "Pão artesanal selado, recheado com carne de costela bovina desfiada, pimentão e cebola.",
         price: "R$ 00,00",
         image: "imagens/f8421119821e1212b869d8c5101e8273b1825963 - Copia - Copia.jpg"
       }
+    ],
+    'sobremesas': [
+      {
+        title: "28 - Névoa Doce de Arroz",
+        description: "Bolinho de arroz glutinoso cozido no vapor, recheado com creme ou frutas, finalizado com farinha doce. Não teremos hoje!",
+        price: "R$ 00,00",
+      },
+       {
+        title: "29 - Doçura das Nuvens",
+        description: "Pão doce crocante assado, recheado com creme ou frutas frescas. Não teremos hoje!",
+        price: "R$ 00,00",
+      },
+      {
+        title: "30 - Doce Encanto do Cacau",
+        description: "Brownie de chocolate com casquinha crocante e interior macio.",
+        price: "R$ 00,00",
+      },
+      {
+        title: "31 - Brisa Gelada do Oriente",
+        description: "Brownie de chocolate com casquinha crocante e interior macio.",
+        price: "R$ 00,00",
+      },
     ]
   };
 
