--- a/index.html
+++ b/index.html
@@ -215,10 +215,9 @@ header {
     <img src="imagens/Logo Restaurante Charme-10.jpg" alt="Yunwei logo" />
 
     <nav id="menu">
-      <span class="active" data-category="aperitivos">Aperitivos</span>
-      <span data-category="refeicoes">Refeições</span>
-      <span data-category="saladas">Saladas</span>
-      <span data-category="prato-principal">Prato Principal</span>
+      <span class="active" data-category="aperitivos">Entrada</span>
+      <span data-category="refeições">Prato Pincipal</span>
+      <span data-category="prato-principal">Executivo</span>
       <span data-category="sobremesas">Sobremesa</span>
     </nav>
 
@@ -242,131 +241,42 @@ header {
     'aperitivos': [
       {
         title: "01 - Panda Pão de Carne",
-        description: "Recheio de carne com gengibre, cebolinha e vegetais. Não teremos hoje!",
+        description: "Pão macio cozido no vapor, recheado com carne bovina, gengibre e cebolinha.",
         price: "R$ 02,00",
         image: "imagens/028a636ce4b3f99490ff574be7582d819a89cb88.png"
       },
       {
         title: "01 - Panda Pão de Vegetais",
-        description: "Recheio de cogumelos Shitake com vegetais.  Não teremos hoje!",
+        description: "Versão vegetariana com cogumelo, acelga e massa de trigo.Recheio de carne com gengibre, cebolinha e vegetais.",
         price: "R$ 00,00",
         image: "imagens/c4e7c662ef4a9f898fcca95f55f75d8308703017.png"
       },
       {
         title: "02 - Corte Wei ao Molho Negro",
-        description: "Rosbife de carne músculo defumado e temperado com especiarias chinesas.",
+        description: "Rosbife de carne bovina defumada e marinada em especiarias chinesas, cozida lentamente até ficar macia.",
         price: "R$ 00,00",
         image: "imagens/415c56a3c3758f12a7b67906ffd8e2fd5e2e38fa (1).png"
       },
       {
         title: "03 - Estalido da Floresta",
-        description: "Shimeji branco, pimentao vermelho, pimentao verde.",
+        description: "Cogumelos shimeji empanados e salteados no wok com pimentões e sal aromatizado.",
         price: "R$ 00,00",
         image: "imagens/ffdb6aad439844355f34cba00be7d25ee2e9f536.png"
       },
       {
         title: "04 - Delícia Crocante do Oceano",
-        description: "Camarão, pão formado sem cascra adosante leite condensado wasbi gengilim branco e preto.",
+        description: "Creme de camarão sobre pão, empanado com gergelim preto e branco, frito até dourar.",
         price: "R$ 00,00",
         image: "imagens/6af76c5a562a727a8a346a79ff0fa11791aee8e8.png"
       },
       {
         title: "05 - Estalido do Mar",
-        description: "Lula, pimentao verde, pimentao vermelho, cebola.",
+        description: "Tiras de lula empanadas e salteadas no wok com pimentões, alho e sal aromatizado.",
         price: "R$ 00,00",
         image: "imagens/34dece0ecaba699a54c375f375e1a68fee0c7c28.png"
-      }
-    ],
-    'refeicoes': [
-      {
-        title: "06 - Tesouro Agridoce de Lombinho",
-        description: "Filé mignon suíno com molho agridoce.",
-        price: "R$ 00,00",
-        image: "imagens/1471ee4a6cdde8deb7c1494f4503f27c92a0d6ac.png"
       },
-      {
-        title: "07 - Pipoca de camarão crocante",
-        description: "Camarão a milanea crocante",
-        price: "R$ 00,00",
-        image: "imagens/dd567fa6c49aafad2ced6e36442d5cde1e66b7b9.png"
-      },
-      {
-        title: "08 - Brilho Agridoce de Abacaxi e Frango",
-        description: "Peito de frango pimentao de verde vermelho amarelo cebola.",
-        price: "R$ 00,00",
-        image: "imagens/5fbd7dadeec4e86ccbdb74b2ec6261f248b02d28.png"
-      },
-      {
-        title: "09 - Peixe ao Vapor",
-        description: "Namorado feito no vapor com um leve toque de gengibre, cebolinha e pimentão ",
-        price: "R$ 00,00",
-        image: "imagens/peixe a vapor.jpg"
-      },
-      {
-        title: "10 - Bailarinos do Mar ao Alho",
-        description: "Camarões ao alho e epeciarias sobre cama de bifum",
-        price: "R$ 00,00",
-        image: "imagens/515112781c6cba08178c84e170b99057386c798f - Copia.png"
-      },
-      {
-        title: "11 - Suspiro de Sichuan",
-        description: "File mignon de suina cenoura pimentao verde cogumelo preto cebolinha alho.",
-        price: "R$ 00,00",
-        image: "imagens/b05d0c3e9f5e26fceff8ee9b0bf02d6906770d0e.png"
-      },
-      {
-        title: "12 - Kung Bao Frango",
-        description: "Peito de frango com pepino cenoura, cebolinha e amendoim.",
-        price: "R$ 00,00",
-        image: "imagens/37e03bcc4adeca70d7de29af660f44868eb9a07a - Copia.png"
-      },
-      {
-        title: "13 - Brilho Oriental de Bifum e Carne",
-        description: "File mignon de boi com pimentão vermelho e cebolinha.",
-        price: "R$ 00,00",
-        image: "imagens/bifum.jpg"
-      },
-      {
-        title: "14 - Kung-Fu Yakisoba",
-        description: "",
-        price: "R$ 00,00",
-        image: "imagens/40201b2764ffef62aef35ceaff407456f3bcad92 - Copia.png"
-      },
-      {
-        title: "15 - Yakisoba de Carne Clássico",
-        description: "Fariha de trigo, file mignon de boi, camarao, repolho, legumes de soja e cenoura.",
-        price: "R$ 00,00",
-        image: "imagens/yakisoba de carne clássico.jpg"
-      },
-      {
-        title: "16 - Mapo Tofu",
-        description: "Mapo Tofu.",
-        price: "R$ 00,00",
-        image: "imagens/mapo tofu.jpg"
-      },
-      {
-        title: "17 - Barriga de Porco Picante",
-        description: "Pancetta Glaceada no Wok com Pimenta Fresca e Alho-Poró.",
-        price: "R$ 00,00",
-        image: "imagens/64019ba41f87e9b5f7fee892f2a10fc542d22f3d.png"
-      },
-      {
-        title: "18 - Primavera de Jiangnan",
-        description: "Salsão fino , Tofu defumado, pimentão vermelho",
-        price: "R$ 00,00",
-        image: "imagens/9c985645f633e0949176e0764723f2e8f9d47791 - Copia - Copia.png"
-      },
-      {
-        title: "19 - Tiras do Imperador",
-        description: "Batata, pimentão verde, pimentão vermelho",
-        price: "R$ 00,00",
-        image: "imagens/4ee9b5516d27f595f53e60e771f91fdd09e8324a - Copia - Copia.png"
-      }
-
-    ],
-    'saladas': [
-      {
-        title: "20 - Jardim Colorido do Oriente",
+       {
+        title: "20 - Vegetais Mix",
         description: "Salada fresca de pepino, mini tomates, folhas verdes e pimentões, temperada com molho leve oriental.",
         price: "R$ 00,00",
         image: "imagens/20250617-172843.jpg"
@@ -378,35 +288,115 @@ header {
         image: "imagens/petalas apimentadas.jpg"
       },
        {
-        title: "22 - Vegetais Mix",
-        description: "Tiras finas de tofu, pepino e cenoura temperadas com molho leve e coentro. Não teremos hoje!",
-        price: "R$ 00,00",
-        image: "imagens/20250617-172843.jpg"
-      },
-       {
-        title: "23 - Folhas de Névoa",
-        description: "Massa artesanal de trigo, servida fria com pepino, cenoura, repolho, coentro,  cebolinha ",
-        price: "R$ 00,00",
-        image: "imagens/folhasdenovoa.jpg"
-      },
-     /*  {
-        title: "Brilho Fresco de Tiras de Tofu",
-        description: "Macarrão com tofu, pepino, cenoura, coentro.",
+        title: "22 - Brilho Fresco de Tiras de Tofu",
+        description: "Tiras finas de tofu, pepino e cenoura temperadas com molho leve e coentro.",
         price: "R$ 00,00",
         image: "imagens/brilho fresco de tiras de tofu.jpg"
       },
-      */
+       {
+        title: "23 - Folhas de Névoa",
+        description: "Massa artesanal de trigo, servida fria com pepino, cenoura, repolho, coentro,  cebolinha.",
+        price: "R$ 00,00",
+        image: "imagens/folhasdenovoa.jpg"
+      },
+    ],
+    'refeições': [
+      {
+        title: "06 - Tesouro Agridoce de Lombinho",
+        description: "Tiras de filé mignon suíno empanadas e salteadas, glaceadas no molho agridoce clássico.",
+        price: "R$ 00,00",
+        image: "imagens/1471ee4a6cdde8deb7c1494f4503f27c92a0d6ac.png"
+      },
+      {
+        title: "07 - Pipoca de camarão crocante",
+        description: "Camarões grandes empanados, fritos e temperados com sal aromatizado.",
+        price: "R$ 00,00",
+        image: "imagens/dd567fa6c49aafad2ced6e36442d5cde1e66b7b9.png"
+      },
+      {
+        title: "08 - Brilho Agridoce de Abacaxi e Frango",
+        description: "Frango empanado, salteado no wok e glaceado com molho agridoce, abacaxi e pimentões.",
+        price: "R$ 00,00",
+        image: "imagens/5fbd7dadeec4e86ccbdb74b2ec6261f248b02d28.png"
+      },
+      {
+        title: "09 - Peixe ao Vapor",
+        description: "Filé de namorado cozido no vapor com um toque de gengibre, cebolinha e pimentões frescos. ",
+        price: "R$ 00,00",
+        image: "imagens/peixe a vapor.jpg"
+      },
+      {
+        title: "10 - Bailarinos do Mar ao Alho",
+        description: "Camarões frescos cozidos no vapor sobre cama de bifum, finalizados com alho e cebolinha.",
+        price: "R$ 00,00",
+        image: "imagens/515112781c6cba08178c84e170b99057386c798f - Copia.png"
+      },
+      {
+        title: "11 - Suspiro de Sichuan",
+        description: "Tiras de porco salteadas no wok com cenoura, pimentão, cogumelo preto, alho e molho picante agridoce.",
+        price: "R$ 00,00",
+        image: "imagens/b05d0c3e9f5e26fceff8ee9b0bf02d6906770d0e.png"
+      },
+      {
+        title: "12 - Kung Bao Frango",
+        description: "Frango perfeitamente em cubos salteado com amendoim, pepino, cenoura, pimentas secas e molho levemente adocicado e picante.",
+        price: "R$ 00,00",
+        image: "imagens/f44e49c234745bb62ed0e632ede12e5e8fe4de94 - Copia.png"
+      },
+      {
+        title: "13 - Brilho Oriental de Bifum e Carne",
+        description: "Tiras de filé mignon bovino salteadas com bifum, pimentões e cebolinha.",
+        price: "R$ 00,00",
+        image: "imagens/bifum.jpg"
+      },
+      {
+        title: "14 - Kung-Fu Yakisoba",
+        description: "Macarrão feito na casa com vegetais, tomate, broto de feijão, alho e pimenta seca.",
+        price: "R$ 00,00",
+        image: "imagens/40201b2764ffef62aef35ceaff407456f3bcad92 - Copia.png"
+      },
+      {
+        title: "15 - Yakisoba de Carne Clássico",
+        description: "Macarrão salteado no wok com carne bovina, camarões ou vegetais, broto de feijão, repolho e cenoura.",
+        price: "R$ 00,00",
+        image: "imagens/yakisoba de carne clássico.jpg"
+      },
+      {
+        title: "16 - Mapo Tofu",
+        description: "Cubos de tofu salteados no molho picante com pasta de feijão fermentado, alho e cebolinha.",
+        price: "R$ 00,00",
+        image: "imagens/mapo tofu.jpg"
+      },
+      {
+        title: "17 - Barriga de Porco Picante",
+        description: "Fitas de pancetta cozidas e depois salteadas no wok com alho-poró, pimenta fresca e molho de feijão fermentado.",
+        price: "R$ 00,00",
+        image: "imagens/64019ba41f87e9b5f7fee892f2a10fc542d22f3d.png"
+      },
+      {
+        title: "18 - Primavera de Jiangnan",
+        description: "Tofu defumado salteado com salsão, pimentão vermelho e temperos frescos.",
+        price: "R$ 00,00",
+        image: "imagens/9c985645f633e0949176e0764723f2e8f9d47791 - Copia - Copia.png"
+      },
+      {
+        title: "19 - Tiras do Imperador",
+        description: "Tiras de batata salteadas com pimentões, vinagre de arroz e alho.",
+        price: "R$ 00,00",
+        image: "imagens/4ee9b5516d27f595f53e60e771f91fdd09e8324a - Copia - Copia.png"
+      }
+
     ],
     'prato-principal': [
       {
         title: "24 - Arroz Yunwei ",
-        description: "Arroz da loja chinesa /ovos/ milho/cenora/ pepino/cebolinha/salsicha.",
+        description: "Arroz frito no wok com ovos, milho, cenoura, pepino, linguiça chinesa e cebolinha.",
         price: "R$ 00,00",
         image: "imagens/arroz chines.jpg"
       },
        {
         title: "25 - Sopro do Norte",
-        description: "Macarrão lámen artesanal servido em caldo escuro, com carne bovina cozida lentamente, legumes e coentro. Não teremos hoje!",
+        description: "Macarrão lámen artesanal servido em caldo escuro, com carne bovina cozida lentamente, legumes e coentro.",
         price: "R$ 00,00",
         image: "imagens/c070cf7e9f239f9a35dbc18c3e767cc79118bd08.png"
       },
@@ -426,22 +416,26 @@ header {
     'sobremesas': [
       {
         title: "28 - Névoa Doce de Arroz",
-        description: "Bolinho de arroz glutinoso cozido no vapor, recheado com creme ou frutas, finalizado com farinha doce. Não teremos hoje!",
+        description: "Bolinho de arroz glutinoso cozido no vapor, recheado com creme ou frutas, finalizado com farinha doce.",
+        image: "",
         price: "R$ 00,00",
       },
        {
         title: "29 - Doçura das Nuvens",
-        description: "Pão doce crocante assado, recheado com creme ou frutas frescas. Não teremos hoje!",
+        description: "Pão doce crocante assado, recheado com creme ou frutas frescas.",
+        image: "imagens/34660403344d747d5c9c5f9a3615471b471ea89f - Copia - Copia.jpg",
         price: "R$ 00,00",
       },
       {
         title: "30 - Doce Encanto do Cacau",
         description: "Brownie de chocolate com casquinha crocante e interior macio.",
+        image: "imagens/478f8c73206e7243480ca28e21437e412940a141 - Copia - Copia.jpg",
         price: "R$ 00,00",
       },
       {
         title: "31 - Brisa Gelada do Oriente",
-        description: "Brownie de chocolate com casquinha crocante e interior macio.",
+        description: "Sorvete artesanal em sabores selecionados, servido cremoso e refrescante.",
+        image: "imagens/5ba67753d15cf51432f8a2af1ef730c862d84fcb - Copia (2).jpg",
         price: "R$ 00,00",
       },
     ]
