--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ header {
       },
       {
         title: "17 - Pancetta Ardente do Oriente",
-        description: "Pancetta Galceada no Wok com pimenta freca e alho-poró.",
+        description: "Pancetta Glaceada no Wok com pimenta freca e alho-poró.",
         price: "R$ 00,00",
         image: "imagens/64019ba41f87e9b5f7fee892f2a10fc542d22f3d.png"
       },
